2009-05-07  Darren Kenny  <darren.kenny@sun.com>

	* capplet/nwam-manager-properties.glade:
	  Add names to some labels so we can set sensitivity.
	* capplet/nwam_env_pref_dialog.c:
	  Fix some issues on Nameservices tab.
	* common/nwamui_daemon.c: 
	  Handle some basic events - still a few more to to.
	* common/nwamui_env.c: 
	  Update for nameservices.
	* common/nwamui_ncp.c: 
	  Fix a bug in nwam_ncu_walker_cb where it was not removing found NCUs
	  from the removal tempoary list.
	* common/nwamui_wifi_net.h, common/nwamui_wifi_net.c: 
	  Add functions to populate a NwamuiWifiNet from a nwam_wifi_info_t -
	  nwamui_wifi_net_update_from_wlan_t and nwamui_wifi_net_new_from_wlan_t.
	* nwam_core/usr/include/libdlflow.h,  nwam_core/usr/include/libnwam.h,
	  nwam_core/usr/include/sys/mac.h:
	  Update headers from latest NWAM Core sources.

2009-05-06  Lin Ma  <Lin.Ma@Sun.COM>

	* capplet/capplet-utils.c (capplet_compose_nwamui_obj_combo),
	(nwam_pref_iface_combo_changed_cb), (capplet_column_new),
	(tree_model_find_object_cb), (capplet_model_get_iter),
	(capplet_combo_get_active_object),
	(capplet_combo_set_active_object), (capplet_get_max_name_num):
	* capplet/capplet-utils.h:
	Rename some function name, fix build warnings.
	* capplet/nwam_conn_stat_panel.c:
	Remove dup function declarations.
	* capplet/nwam_net_conf_panel.c (nwam_pref_init),
	(nwam_net_conf_panel_init), (refresh), (apply):
	Net Pref: Add active profile combo.
	* capplet/nwam_pref_dialog.c (nwam_capplet_dialog_class_init),
	(nwam_capplet_dialog_init), (nwam_capplet_dialog_finalize),
	(refresh), (show_changed_cb):
	Pass the active ncp to net conf panel when selecting in show combo.

2009-05-05  Lin Ma  <Lin.Ma@Sun.COM>

	* capplet/capplet-utils.c (capplet_compose_nwamui_obj_combo),
	(capplet_model_foreach_find_object), (capplet_model_find_object),
	(capplet_model_remove_object), (capplet_compose_combo),
	(capplet_tree_store_move_object),
	(capplet_tree_store_merge_children),